# lilliput

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
lilliput-core/: Cargo.toml  README.md
lilliput-core/benches/: encode.rs  headers.rs  values.rs
lilliput-core/examples/: basic.rs
lilliput-core/src/: binary.rs  config.rs  decoder.rs  encoder.rs  error.rs  fmt.rs  header.rs  io.rs  lib.rs  marker.rs  num.rs  sealed.rs  tests.rs  value.rs
lilliput-core/src/binary/: byte.rs  byte_slice.rs
lilliput-core/src/config/: float.rs  int.rs  length.rs
lilliput-core/src/decoder/: bool.rs  bytes.rs  float.rs  int.rs  map.rs  null.rs  seq.rs  string.rs  unit.rs
lilliput-core/src/encoder/: bool.rs  bytes.rs  float.rs  int.rs  map.rs  null.rs  seq.rs  string.rs  unit.rs
lilliput-core/src/fmt/: byte.rs  byte_slice.rs
lilliput-core/src/header/: bool.rs  bytes.rs  float.rs  int.rs  map.rs  null.rs  reserved.rs  seq.rs  string.rs  unit.rs
lilliput-core/src/num/: be_bytes.rs  float.rs  int.rs  int_cast.rs  zigzag.rs
lilliput-core/src/tests/: bool.rs  bytes.rs  float.rs  int.rs  map.rs  null.rs  seq.rs  string.rs
lilliput-core/src/value/: bool.rs  bytes.rs  float.rs  int.rs  map.rs  null.rs  seq.rs  string.rs  unit.rs
lilliput-core/src/value/int/: signed.rs  unsigned.rs
lilliput-float/: Cargo.toml  README.md
lilliput-float/benches/: packing.rs
lilliput-float/src/: bits.rs  classify.rs  extend.rs  floats.rs  lib.rs  native.rs  pack.rs  packed.rs  repr.rs  truncate.rs  validator.rs
lilliput-serde/: Cargo.toml  README.md
lilliput-serde/examples/: basic.rs
lilliput-serde/proptest-regressions/: tests.txt
lilliput-serde/src/: config.rs  de.rs  error.rs  lib.rs  ser.rs  tests.rs
packed-float/: Cargo.toml
packed-float/src/: be_bytes.rs  bits.rs  classify.rs  cmp.rs  extend.rs  floats.rs  lib.rs  native.rs  truncate.rs
spec/: Bool.md  Bytes.md  Float.md  Floats.md  Integer.md  Map.md  Null.md  README.md  Sequence.md  String.md  Unit.md
