[workspace]
members = [
    "lilliput-core",
]
resolver = "2"

[workspace.package]
license = "MPL-2.0"
edition = "2021"
rust-version = "1.70.0"

[workspace.dependencies]
proptest = { version = "1.6.0" }
proptest-derive = { version = "0.5.1" }
serde = { version = "1.0.197", default-features = false }

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3

[profile.samply]
inherits = "release"
debug = true
