[package]
name = "lilliput-core"
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
version = "0.1.0"

[dependencies]
decorum = { version = "0.4.0", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
ordermap = { version = "0.5.5", optional = true }
thiserror = "2.0.12"

[dev-dependencies]
proptest = "1.6.0"
proptest-derive = "0.5.1"

[features]
preserve_order = [
    "ordermap"
]
