[package]
name = "lilliput-core"
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
version = "0.1.0"

[dependencies]
decorum = { version = "0.4.0", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
ordermap = { version = "0.5.5", optional = true }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_bytes = { version = "0.11.17", default-features = false, optional = true }
thiserror = "2.0.12"
tracing = { version = "0.1.41", features = ["release_max_level_error"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = { workspace = true }
proptest-derive = { workspace = true }
rand = "0.9.0"
rand_xorshift = "0.4.0"

[[bench]]
name = "values"
harness = false

[[bench]]
name = "headers"
harness = false

[features]
default = ["std"]
alloc = ["serde_bytes?/alloc"]
std = ["alloc", "serde_bytes?/std"]
preserve_order = [
    "ordermap"
]
serde = [
    "dep:serde", "dep:serde_bytes", "ordermap?/serde"
]
testing = [
    "proptest", "proptest-derive"
]
