[package]
name = "lilliput-float"
description = "IEEE-754-compliant float-packing implementation, used in lilliput-core"
repository = { workspace = true }
license = { workspace = true }
edition = "2021"
rust-version = "1.71.0"
version = "0.1.0"

[dependencies]
tracing = { workspace = true, features = ["release_max_level_error"], optional = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
proptest-derive = { workspace = true }
rand = { workspace = true }
rand_xorshift = { workspace = true }
test-log = { workspace = true }

[[bench]]
name = "packing"
harness = false

[features]
tracing = ["dep:tracing"]
full = []
