[package]
name = "lilliput-serde"
version = "0.0.0"
edition = "2021"
rust-version = "1.71.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lilliput-core = { path = "../lilliput-core", features = ["serde", "testing"] }
indexmap = { version = "2.2.3", optional = true }
num-traits = "0.2.19"
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
proptest-derive = { workspace = true }
insta = "1.42.1"
maplit = "1.0.2"
serde = { workspace = true, features = ["derive"] }
serde_bytes = "0.11"

[features]
default = ["std", "unbounded_depth"]
alloc = ["serde/alloc"]
std = ["alloc", "serde/std"]
preserve_order = ["indexmap"]
unbounded_depth = []
